--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "prestart:myproxy": "npm run build",
-    "start:myproxy": "gatsby server -p 3002"
+    "start:myproxy": "gatsby serve -p 3002"
   },
   "repository": {
     "type": "git",
